@@ -30,4 +30,4 @@ D/wmlscript////
 /mkinstalldirs/1.1/Fri Nov 11 16:58:32 2005//
 /configure/1.157/Wed Jan 18 14:44:49 2006//
 /configure.in/1.162/Wed Jan 18 14:44:49 2006//
-/ChangeLog/1.2726/Thu Jan 19 12:28:23 2006//
+/ChangeLog/1.2727/Sun Jan 29 15:52:57 2006//
