@@ -1,5 +1,5 @@
 D/images////
 /.cvsignore/1.4/Fri Nov 11 16:58:30 2005//
 /sms-gateway.fig/1.1/Fri Nov 11 16:58:30 2005//
-/userguide.xml/1.311/Tue Jan 10 11:56:28 2006//
 /wap-gateway.fig/1.2/Fri Nov 11 16:58:30 2005//
+/userguide.xml/1.312/Sun Jan 29 15:36:06 2006//
