@@ -26,5 +26,5 @@
 /smsc_wrapper.c/1.8/Fri Nov 11 16:58:36 2005//
 /smpp_pdu.c/1.24/Tue Jan 10 17:03:17 2006//
 /smpp_pdu.h/1.12/Tue Jan 10 16:59:41 2006//
-/smsc_smpp.c/1.86/Thu Jan 19 12:28:23 2006//
+/smsc_smpp.c/1.87/Sun Jan 29 15:47:27 2006//
 D
